--- a/style.css
+++ b/style.css
@@ -11,13 +11,34 @@
 .timer-clock{
     margin: 1rem;
     border: 0.25rem solid rgba(0,0,0,0.1);
-}
-
-.timer-text{
     font-size: 35px;
     font-weight: 600;
+    display:flex;
 }
 
+.timer-text-1{
+    display:inline-block;
+}
+.timer-text-2{
+    display:inline-block;
+}
+.timer-text-3{
+    display:inline-block;
+}
+
+.add-timer{
+    margin: 1rem;
+}
+.add-timer-button{
+    background-color: #04AA6D; /* Green */
+    border: none;
+    color: white;
+    padding: 12px 28px;
+    text-align: center;
+    text-decoration: none;
+    font-size: 16px;
+    cursor: pointer;
+}
 .add-timer-box{
     margin: 1rem;
     display:flex;
@@ -26,8 +47,9 @@
 
 .add-time-slot{
     display:inline-block;
+    text-align: center;
+    font-size: 20px;
     max-width: 30px;
-    
     max-height: 30px;
 }
 .add-time-text{
