--- a/style.css
+++ b/style.css
@@ -1,16 +1,35 @@
-.title {
-    text-align: center;
-    font-weight: 700;
-    color:red;
+body{
+    font-family: sans-serif;
+    display:flex;
+    flex-direction: column;
+    align-items: center;
 }
-
+.title {
+    margin: 1rem;
+    border-bottom: 2px solid #8ab4f8;
+}
+.title h1{
+    /* border-bottom: 2px solid #8ab4f8; */
+    color: #ffffff;
+    font-weight: 300;
+    font-size: 25px;
+    margin-bottom: 5px;
+    
+}
+.outer-timer-container{
+    display:flex;
+    flex-direction: column;
+    background: #303030;
+    width: 600px;
+    border-radius: 15px;
+}
 .timer-list {
+    margin-top: 50px;
+    text-align: center;
     display:table;
 }
-
 .timer-clock{
     margin: 1rem;
-    border: 0.25rem solid rgba(0,0,0,0.1);
     font-size: 35px;
     font-weight: 600;
     display:flex;
@@ -25,12 +44,14 @@
 .timer-text-3{
     display:inline-block;
 }
-
-.add-timer{
+.button-container{
+    border-top: 2px solid #8ab4f8;
+    display:flex;
     margin: 1rem;
 }
+.reset-timer-button,
 .add-timer-button{
-    background-color: #04AA6D; /* Green */
+    margin-top: 25px;
     border: none;
     color: white;
     padding: 12px 28px;
@@ -38,11 +59,20 @@
     text-decoration: none;
     font-size: 16px;
     cursor: pointer;
+    border-radius: 3px;
+}
+.add-timer-button{
+    background-color: #04AA6D;
+    margin-right: 30px;
+}
+.reset-timer-button{
+    background-color: rgb(150, 150, 150);
 }
 .add-timer-box{
     margin: 1rem;
     display:flex;
     vertical-align: bottom;
+    color:white;
 }
 
 .add-time-slot{
